# puffgres

./: .env  .gitignore  AGENT_TASKS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  package.json  rebuild-puffgres
.github/workflows/: build-npm.yml  ci.yml  e2e.yml  release.yml
crates/puffgres-cli/: Cargo.toml
crates/puffgres-cli/src/: backfill.rs  cli.rs  config.rs  dlq.rs  env.rs  main.rs  runner.rs  validation.rs
crates/puffgres-cli/src/commands/: dangerous.rs  init.rs  migrate.rs  mod.rs  new.rs  reset.rs  run.rs  setup.rs  status.rs
crates/puffgres-config/: Cargo.toml
crates/puffgres-config/src/: error.rs  lib.rs  migration.rs  validation.rs
crates/puffgres-core/: Cargo.toml
crates/puffgres-core/src/: action.rs  batcher.rs  error.rs  js_transform.rs  lib.rs  mapping.rs  predicate.rs  router.rs  transform.rs  types.rs
crates/puffgres-core/tests/: fixture_runner.rs
crates/puffgres-core/tests/fixtures/: basic_insert.json  membership_filter.json
crates/puffgres-pg/: Cargo.toml
crates/puffgres-pg/src/: backfill.rs  connect.rs  error.rs  lib.rs  migrations.rs  state.rs  streaming.rs  wal2json.rs
crates/puffgres-pg/src/replication/: client.rs  lsn.rs  mod.rs  pgoutput.rs  publication.rs  relation_cache.rs  slot.rs  validation.rs
crates/puffgres-state/: Cargo.toml
crates/puffgres-state/src/: error.rs  lib.rs  sqlite.rs
crates/puffgres-tp/: Cargo.toml
crates/puffgres-tp/src/: client.rs  error.rs  lib.rs  mock.rs
debug-ui/: index.html  server.js
dev/: AGENTS.md  AGENT_TASKS.md  SPEC.md  feedback.md
examples/01/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml
examples/01/puffgres/: .gitignore
examples/01/puffgres/migrations/: 0001_pagebatchembed.toml  0001_pageembed.toml  0001_pageembedinbatch.toml  0001_users.toml  0001_userstandard.toml  0001_vectortest.toml  0002_testbackfill.toml  0002_user_vector.toml  0002_uservectortransform.toml  0002_vectortest2.toml  0003_newvector.toml  0003_usersyo.toml  0004_antohervec.toml
examples/01/puffgres/transforms/: antohervec.ts  pagebatchembed.ts  pageembed.ts  testbackfill.ts  user_vector.ts  users.ts  usersyo.ts  uservectortransform_public.ts  vectortest.ts  vectortest2.ts
npm/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
npm/docs/: deployment.md
npm/native/: Cargo.toml
npm/native/src/: config.rs  lib.rs  runtime.rs
npm/scripts/: copy-native.js
npm/src/: cli.ts  context.ts  index.ts  test-transform-runner.ts  transform-executor.ts  transform-runner.ts
npm/tests/e2e/: cdc-flow.test.ts  setup.ts
npm/types/: index.d.ts
scripts/: release.sh
