[package]
name = "puffgres-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Use logical replication to keep Postgres and Turbopuffer in sync"
homepage = "https://github.com/lucasgelfond/puffgres"
license = "MIT"

[[bin]]
name = "puffgres"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
puffgres-core = { workspace = true }
puffgres-config = { workspace = true }
puffgres-pg = { workspace = true }
rs-puff = { workspace = true }
