[package]
name = "puffgres-core"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
native-tls = ["rs-puff/native-tls"]
rustls-tls = ["rs-puff/rustls-tls"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rs-puff = { workspace = true }
