[package]
name = "puffgres-pg"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
puffgres-core = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
