[package]
name = "puffgres-pg"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
puffgres-core = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
postgres-protocol = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pgwire-replication = "0.1"
byteorder = "1.5"
url = "2.5"
