[package]
name = "puffgres-neon"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10", default-features = false, features = ["napi-6"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"

# Override reqwest to use rustls instead of native-tls (avoids OpenSSL for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }

# Local puffgres crates
puffgres-core = { path = "../../crates/puffgres-core" }
puffgres-config = { path = "../../crates/puffgres-config" }
puffgres-pg = { path = "../../crates/puffgres-pg" }

[build-dependencies]
neon-build = "0.10"
